# exploring_rust

./: .gitignore  README.md
atm_machine/: Cargo.toml
atm_machine/src/: main.rs
cargo-projects/algorithms/: Cargo.toml  README.md
cargo-projects/algorithms/src/: armstrong_number.rs  armstrong_number_by_str_conversion.rs  arrays.rs  async_tokio.rs  binary_tree_traversal.rs  cache.rs  clock.rs  clock_v2.rs  data_structures.rs  factorial.rs  gigaseconds.rs  iterators.rs  lib.rs  lrucache.rs  main.rs  map_filter_1.rs  modified_binary_search.rs  mut_slices.rs  overlapping_intervals.rs  permutation.rs  references_and_pointers.rs  reverse-string.rs  slices.rs  stack.rs  strings.rs  top_k_elements.rs  trees.rs  ttl.rs  validation.rs  waker_timer.rs
cargo-projects/algorithms/src/cache/: std_ll_lru.rs
cargo-projects/asyncing/: Cargo.toml
cargo-projects/asyncing/src/: file_changes_api.rs  main.rs
cargo-projects/asyncing/src/mock-data/: books.json
cargo-projects/bookreview/: Cargo.toml  README.md  configuration.yaml
cargo-projects/bookreview/migrations/: 20221122213954_create_follows_table.sql  20221210105158_create_books_table.sql
cargo-projects/bookreview/scripts/: db.sh
cargo-projects/bookreview/src/: configuration.rs  lib.rs  main.rs  startup.rs
cargo-projects/bookreview/src/routes/: books.rs  follows.rs  health_check.rs  mod.rs
cargo-projects/bookreview/tests/: ping.rs
cargo-projects/cliapp/: Cargo.toml  README.md
cargo-projects/concat/: Cargo.toml  README.md
cargo-projects/config-parser/: Cargo.toml  config.yaml
cargo-projects/design-patterns/: README.md
cargo-projects/dir-reader/: Cargo.toml
cargo-projects/fibonacci-series/: Cargo.toml
cargo-projects/giv/: .gitignore  Cargo.toml  NOTES.md  README.md
cargo-projects/greatest-common-divisor/: Cargo.toml
cargo-projects/hashmap/: README.md
cargo-projects/linked-lists/: README.md
cargo-projects/vivs/: CHANGELOG.md  Cargo.toml  README.md
cargo-projects/vivs/config/: config.toml
cargo-projects/vivs/scripts/: delete.sh  empty_cmd.sh  get.sh  ping.sh  set.sh
cargo-projects/vivs/src/: cluster.rs  commands.rs  connection.rs  data_chunk.rs  db.rs  handler.rs  lib.rs  listener.rs  main.rs  node_listener.rs  parser.rs  server.rs  utils.rs  vivs.rs
cargo-projects/vivs/src/client/: README.md  repl.rs
cargo-projects/vivs/src/commands/: README.md  ask.rs  asking.rs  delete.rs  get.rs  mod.rs  ping.rs  set.rs  ttl.rs
cargo-projects/vivs/tests/: commands.rs
code-samples/: README.md
file_reader/: main.rs
guessing_game/: Cargo.toml
lite-grep/: README.md  main.rs
password_checker/: Cargo.toml
rust-notes/: README.md  concurrency.md  copy_clone.md  error-handling.md  generics.md  interior-mutability.md  lifetimes.md  low-latency.md  resources.md  smart-pointers.md  trait-objects.md  traits.md
src/: main.rs
(+118 files in other folders)
