[package]
name = "asyncing"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.1", features = ["macros"] }
env_logger = "0.11.8"
log = "0.4.27"
reqwest = { version = "0.12.14", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.12"
tokio = { version = "1.44.0", features = ["full"] }
