[package]
name = "bookreview"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
config = "0.13.2"
chrono = "0.4.23"

[dependencies.uuid]
version = "1.2.1"
features = ["v4"]

[dependencies.sqlx]
version = "0.6.2"
default-features = false
features = [
    "runtime-actix-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate"
]

[dev-dependencies]
reqwest = "0.11"