[package]
name = "vivs"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "vivs"
path = "src/main.rs"

[[bin]]
name = "vivs-repl"
path = "src/client/repl.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
bytes = "1.5.0"
atoi = "2.0.0"
log = "0.4"
env_logger = "0.9.0"
toml = "0.8.19"
serde = { version = "1.0.209", features = ["derive"] }
clap = { version = "4.5.17", features = ["derive"] }
crc = "3.2.1"
